--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.7.13",
     "@types/puppeteer": "^5.4.6",
+    "axios": "^0.27.2",
     "puppeteer": "^16.2.0",
     "puppeteer-autoscroll-down": "^1.1.1",
     "ts-node": "^10.9.1"
