--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^18.7.13",
     "@types/puppeteer": "^5.4.6",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "enquirer": "^2.3.6",
     "puppeteer": "^16.2.0",
     "puppeteer-autoscroll-down": "^1.1.1",
     "ts-node": "^10.9.1"
