--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "scrappy": "npx ts-node ./src/scrappy.app.ts"
   },
   "author": "",
   "license": "ISC",
