--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "enquirer": "^2.3.6",
     "puppeteer": "^16.2.0",
     "puppeteer-autoscroll-down": "^1.1.1",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-adblocker": "^2.13.5",
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
     "ts-node": "^10.9.1"
   }
 }
