--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/node": "^18.7.13",
     "@types/puppeteer": "^5.4.6",
+    "ansi-colors": "^4.1.3",
     "axios": "^0.27.2",
+    "cli-progress": "^3.11.2",
     "dotenv": "^16.0.1",
     "enquirer": "^2.3.6",
     "puppeteer": "^16.2.0",
@@ -20,5 +22,8 @@
     "puppeteer-extra-plugin-adblocker": "^2.13.5",
     "puppeteer-extra-plugin-stealth": "^2.11.1",
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/cli-progress": "^3.11.0"
   }
 }
